fixed image jumping issue in image copy component

--- a/gatsby-cmketech/src/assets/sass/components/_image-copy.scss
+++ b/gatsby-cmketech/src/assets/sass/components/_image-copy.scss
@@ -11,6 +11,7 @@
         flex-direction: column;
         @media #{$mq-largeScreen}{
             flex-direction: row;
+            align-items: flex-start;
         }
     }
     &__image {       
@@ -45,7 +46,7 @@
         }
     }
     &__copy {
-        padding: 2.5rem;
+        padding: 1.5rem 2.5rem;
         h3 {
             text-align: center;
             line-height: 2rem;
